# openArabTools

./: .gitignore  CMakeLists.txt  README.md  openArabTools.sln
depend/glew/: libGLEW.so.2.1.0
depend/glfw/: libglfw.so.3.4
docs/utils/: README.md
exampleProj/: Main.cpp  crossing2.oat  exampleProj.vcxproj
openArabTools/: CONTRIBUTING.md  openArabTools.vcxproj
openArabTools/docs/: README.md  dev.html  index.html  internal.html  style.css
openArabTools/docs/graphics/: README.md
openArabTools/docs/internal/: README.md
openArabTools/docs/types/: README.md
openArabTools/docs/utils/: README.md
openArabTools/include/: OpenArabTools.cpp  OpenArabTools.hpp
openArabTools/src/: Error.cpp  Error.hpp  StandardInclude.hpp  Utils.cpp  Utils.hpp
openArabTools/src/debug/: Debug.hpp  README.md
openArabTools/src/error/: Error.hpp
openArabTools/src/event/: Event.hpp  README.md
openArabTools/src/graphics/: Canvas.cpp  Canvas.hpp  Chessboard.cpp  Chessboard.hpp  Crossing.cpp  Crossing.hpp  Dice.cpp  Dice.hpp  Graphics.hpp  Matrix.cpp  Matrix.hpp  README.md  Semaphore.cpp  Semaphore.hpp
openArabTools/src/graphics/internal/: GLBaseImplementation.cpp  GLBaseImplementation.hpp  GLBaseImplementaton.hpp  GLBatchRender.cpp  GLBatchRender.hpp  GLInterface.cpp  GLInterface.hpp  GLWindow.cpp  GLWindow.hpp
openArabTools/src/graphics/internal/template/: GLShaderBuffer.hpp
openArabTools/src/graphics/resource/: Crossing1.oat
openArabTools/src/remote/: README.md
openArabTools/src/types/: LightColor.cpp  LightColor.hpp  README.md
